<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lego_loam_bor</name>
  <version>1.0.0</version>
  <description>Fork of LeGO-LOAM-BOR</description>

  <maintainer email="yan_1whun1@hotmail.com">Apola</maintainer>

  <license>BSD</license>

  <author >Tixiao Shan</author>
  <author >Davide Faconti</author>
  <author >Apola</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>visualization_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>pluginlib</depend>
  <depend>libpcl-all</depend>
  <depend>pcl_conversions</depend>
  <depend>cloud_msgs</depend>

  <depend>gtsam</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
